--- a/economics_da/economics_mapping.yml
+++ b/economics_da/economics_mapping.yml
@@ -1888,7 +1888,11 @@ zircuit:
     - from_address: "0xE8C20EA8eF100d7aa3846616E5D07A5aBb067C65"
       to_address: "0x92Ef6Af472b39F1b363da45E35530c24619245A4"
       method: "0x1bf75d29"
-      comment: "proposeL2Output v2 (first used 2025-03-12)"
+      comment: "proposeL2Output v2 (first used 2025-03-12, last used 2025-08-25)"
+    - from_address: "0xE8C20EA8eF100d7aa3846616E5D07A5aBb067C65"
+      to_address: "0x92Ef6Af472b39F1b363da45E35530c24619245A4"
+      method: "0x76340d0a"
+      comment: "proposeL2Output v3 (first used 2025-08-25)"
   beacon:
     - from_address: "0xaf1e4f6a47af647f87c0ec814d8032c4a4bff145"
       to_address: null
