--- a/economics_da/economics_mapping.yml
+++ b/economics_da/economics_mapping.yml
@@ -1544,6 +1544,8 @@ fuel:
       to_address: "0xEA0337EFC12e98AB118948dA570C07691E8E4b37"
       method: null
       comment: "0x (first used 2024-08-30, last used 2025-07-03)"
+  eigenda:
+    - namespace: "0xea0337efc12e98ab118948da570c07691e8e4b37"
 
 bob:
   name: "Build on Bitcoin"
@@ -1740,6 +1742,8 @@ aevo:
   celestia:
     - namespace: "AAAAAAAAAAAAAAAAAAAAAAAAAAAADBuw7+PjGs8="
       comment: "used Celestia from 2024-01-16 until 202501-15"
+  eigenda:
+    - namespace: "0x2dc71dbd1cf713e70f939346317bf93a2e62cfee"
 
 ancient8:
   name: "Ancient8"
@@ -1911,6 +1915,7 @@ soon:
   name: "SOON"
   eigenda:
     - namespace: "0x52ebeea8a7dcaaa17ee398b9f9b01dfa64db63ae"
+    - namespace: "0x420ad2641f22bf6f180c52d0b0566e7ec701c45a"
 
 layer_n:
   name: "Layer N"
@@ -1936,6 +1941,16 @@ mantle_testnet:
   name: "Mantle Testnet"
   eigenda:
     - namespace: "0xc16267ecb2297f8a98fce214686e80697da91198"
+
+powerloom:
+  name: "Powerloom"
+  eigenda:
+    - namespace: "0x00efb491755397ab8727ab45c4aef5fdcd3ecef8"
+
+openledger:
+  name: "Openledger"
+  eigenda:
+    - namespace: "0xe16fabeb99a6c098e4d7b4d442df0c827d5a6d26"
 
 plume:
   name: "Plume"
