--- a/economics_da/economics_mapping.yml
+++ b/economics_da/economics_mapping.yml
@@ -1425,15 +1425,15 @@ lumio:
     - from_address: null
       to_address: "0xEe136B6087070d35D98b1bb1B33C3a00D907F0c1"
       method: "0x82ecf2f6"
-      comment: "Create (first used 2025-07-24)"
+      comment: "Create (first used 2025-07-24, chain shut down as of 2025-09-25)"
     - from_address: "0xb6E2Eee22b684f6AAb2083097F7E874994bA930e"
       to_address: null
       method: "0x2810e1d6"
-      comment: "resolve, by central resolver (first used 2025-07-28)"
+      comment: "resolve, by central resolver (first used 2025-07-28, chain shut down as of 2025-09-25)"
     - from_address: "0xb6E2Eee22b684f6AAb2083097F7E874994bA930e"
       to_address: null
       method: "0x03c2924d"
-      comment: "resolveClaim, by central resolver (first used 2025-07-28)"
+      comment: "resolveClaim, by central resolver (first used 2025-07-28, chain shut down as of 2025-09-25)"
     - from_address: "0xb6E2Eee22b684f6AAb2083097F7E874994bA930e"
       to_address: null
       method: "0x60e27464"
@@ -1446,7 +1446,7 @@ lumio:
     - from_address: "0x5c53f2fF1030C7fbC0616fD5B8fC6bE97aa27e00"
       to_address: null
       method: null
-      comment: "blob producer (first used 2024-05-15)"
+      comment: "blob producer (first used 2024-05-15, chain shut down as of 2025-09-25)"
 
 debank:
   name: "DeBank Chain"
