--- a/economics_da/economics_mapping.yml
+++ b/economics_da/economics_mapping.yml
@@ -1411,6 +1411,7 @@ bobanetwork:
       method: null
       comment: "blob producer (first used 2025-06-25)"
 
+# chain shut down as of 2025-09-25
 lumio:
   name: "Lumio"
   l1:
@@ -1992,11 +1993,24 @@ plume:
 
   zklighter:
     name: "zkLighter"
+    l1:
+      - from_address: null
+        to_address: "0x3B4D794a66304F130a4Db8F2551B0070dfCf5ca7"
+        method: "0x23ff50e1"
+        comment: "verifyBatch (first used 2025-01-17)"
+      - from_address: null
+        to_address: "0x3B4D794a66304F130a4Db8F2551B0070dfCf5ca7"
+        method: "0xe415f0f4"
+        comment: "commitBatch (first used 2025-01-17)"
+      - from_address: null
+        to_address: "0x3B4D794a66304F130a4Db8F2551B0070dfCf5ca7"
+        method: "0x2d320e28"
+        comment: "executeBatches (first used 2025-01-17)"
     beacon:
       - from_address: "0xfbc0dcd6c3518cb529bc1b585db992a7d40005fa"
         to_address: null
         method: null
-        comment: "Commit Batch"
+        comment: "commitBatch (first used 2025-01-17)"
 
   katana:
     name: "Katana"
