--- a/economics_da/economics_mapping.yml
+++ b/economics_da/economics_mapping.yml
@@ -2006,6 +2006,10 @@ plume:
         to_address: "0x3B4D794a66304F130a4Db8F2551B0070dfCf5ca7"
         method: "0x2d320e28"
         comment: "executeBatches (first used 2025-01-17)"
+      - from_address: "0xfDb36C132fA19f7774d72fA39c89272D1B954A41"
+        to_address: "0x3B4D794a66304F130a4Db8F2551B0070dfCf5ca7"
+        method: null
+        comment: "misc admin functions (first used 2025-01-17)"
     beacon:
       - from_address: "0xfbc0dcd6c3518cb529bc1b585db992a7d40005fa"
         to_address: null
