--- a/.github/workflows/validate_dune_mapping.yml
+++ b/.github/workflows/validate_dune_mapping.yml
@@ -4,15 +4,11 @@ on:
   pull_request:
     paths:
       - "economics_da/economics_mapping.yml"
-  push:
-    branches:
-      - "**"
-    paths:
-      - "economics_da/economics_mapping.yml"
 
 jobs:
   validate-mapping:
     runs-on: ubuntu-latest
+    if: github.repository == 'growthepie/gtp-dna'
     
     steps:
     - name: Checkout Code
