--- a/economics_da/economics_mapping.yml
+++ b/economics_da/economics_mapping.yml
@@ -897,6 +897,13 @@ mantle:
   eigenda:
     - namespace: "0x24f0a3716805e8973bf48eb908d6d4a2f34af785"
 
+polygon_pos:
+  name: "Polygon"
+  l1:
+    - from_address: null
+      to_address: "0x86E4Dc95c7FBdBf52e33D563BbDB00823894C287"
+      method: "0x4e43e495"
+      comment: "submit Checkpoint (first used 2020-05-30)"
 
 polygon_zkevm:
   name: "Polygon zkEVM"
