--- a/economics_da/economics_mapping.yml
+++ b/economics_da/economics_mapping.yml
@@ -1084,6 +1084,19 @@ zksync_era:
       method: null
       comment: "blob producer (first used 2025-05-12, last used 2025-07-28)"
 
+one_world: # 2741
+  name: "One World" # chain id: 9075
+  l1:
+    - from_address: "0x415ed64d42bc0c37aeaaef79aa767d963ef38807"
+      to_address: "0x2e5110cF18678Ec99818bFAa849B8C881744b776"
+      method: null
+      comment: "executeBatchesSharedBridge & proveBatchesSharedBridge (first used 2024-09-10)"
+  beacon:
+    - from_address: "0x4b2d036d2c27192549ad5a2f2d9875e1843833de"
+      to_address: null
+      method: null
+      comment: "commitBatchesSharedBridge (first used 2024-09-10)"
+
 sophon:
   name: "Sophon"
   l1:
@@ -1126,16 +1139,20 @@ abstract:
     - from_address: "0x415ed64d42bc0c37aeaaef79aa767d963ef38807"
       to_address: "0x8c0Bfc04AdA21fd496c55B8C50331f904306F564"
       method: null
-      comment: "executeBatchesSharedBridge & proveBatchesSharedBridge (first used 2025-05-26)"
+      comment: "executeBatchesSharedBridge & proveBatchesSharedBridge (first used 2025-05-26, last used ?)"
     - from_address: "0x4b2d036d2c27192549ad5a2f2d9875e1843833de"
       to_address: "0x8c0Bfc04AdA21fd496c55B8C50331f904306F564"
       method: null
-      comment: "commitBatchesSharedBridge (first used 2025-05-26)"
+      comment: "commitBatchesSharedBridge (first used 2025-05-26, last used ?)"
+    - from_address: "0x415ed64d42bc0c37aeaaef79aa767d963ef38807"
+      to_address: "0x2e5110cF18678Ec99818bFAa849B8C881744b776"
+      method: null
+      comment: "executeBatchesSharedBridge & proveBatchesSharedBridge (first used 2025-12-02)"
   beacon:
     - from_address: "0x11805594be0229ef08429d775af0c55f7c4535de"
       to_address: null
       method: null
-      comment: "blob producer (last used 2025-05-26)"
+      comment: "blob producer (last used 2025-05-26, last used ?)"
     - from_address: "0x4b2d036d2c27192549ad5a2f2d9875e1843833de"
       to_address: null
       method: null
